# banking-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
compass/: README.md
compass/eval/: __init__.py  __main__.py  adversarial.py  adversarial_corpus.py  adversarial_report.py  adversarial_results.py  adversarial_run.py  budget.py  cli.py  corpus.py  gitmeta.py  orchestrator.py  protocols.py  runner.py  types.py
compass/eval/sources/: audit_log.py  eval_runs.py  langfuse_scores.py
compass/eval/suites/: cost_latency.py  functional.py  policy_compliance.py
compass/policy/: __init__.py  agent.py  audit_sink.py  engine.py  errors.py  hashing.py  paths.py  registry.py  sink.py  snapshot.py  types.py
compass/policy/primitives/: approval.py  audit.py  evidence.py  identity.py  intent.py  resolution.py  value.py
db/: schema.sql
docs/: COMPASS_POLICY_DIAGRAM.md  POLICY_ENGINE_DIAGRAM.md  PRE_PRODUCTION.md  build-plan.md  eval-results-send-invoice-v0.1.md  running_evals.md
docs/superpowers/plans/: 2026-05-27-stage-5-policy-engine.md  2026-05-28-stage-7-eval-harness.md  2026-05-29-stage-8-promptfoo-adversarial.md
docs/superpowers/specs/: 2026-05-27-stage-4-send-invoice-workflow-design.md  2026-05-27-stage-5-policy-engine-design.md  2026-05-27-stage-6-intent-classifier-design.md  2026-05-28-stage-7-eval-harness-design.md  2026-05-29-stage-8-promptfoo-adversarial-design.md  2026-06-01-scope-gate-embedded-instruction-design.md
evals/: judge_config.yaml  run_config.yaml
evals/adversarial/: README.md  assertion.py  contexts.yaml  provider.py
mcp_bank/: README.md  __init__.py  __main__.py  db.py  models.py  server.py
policies/: send_invoice.py
scripts/: approve_workflow.py  check_dependency_direction.sh  start_workflow.py
synthetic_account_1/: README.md  __init__.py  load_to_postgres.py  pydantic_models.py  simulate.py  verify.py
synthetic_account_1/config/: adversarial.yaml  company.yaml  contracts.yaml  customers.yaml  rate_cards.yaml  vendors.yaml
synthetic_account_1/ground_truth/: dataset_manifest.json
synthetic_account_1/ground_truth/holdout/: invoice_resolution_labels.jsonl  perturbation_stability_labels.jsonl  policy_compliance_labels.jsonl  scope_gate_labels.jsonl
synthetic_account_1/ground_truth/train/: invoice_resolution_labels.jsonl  perturbation_stability_labels.jsonl  policy_compliance_labels.jsonl  scope_gate_labels.jsonl
tests/: conftest.py  test_load_to_postgres_sql.py  test_pydantic_models.py  test_simulate_determinism.py  test_verify.py
tests/compass/eval/: conftest.py  test_adversarial_cli.py  test_adversarial_corpus.py  test_adversarial_freeze.py  test_adversarial_report.py  test_adversarial_results.py  test_adversarial_run.py  test_audit_log_source.py  test_budget.py  test_cli.py  test_corpus.py  test_e2e_smoke.py  test_gitmeta.py  (+10 more)
tests/mcp_bank/: conftest.py  test_server.py
tests/policies/: conftest.py  test_send_invoice_rules.py
tests/synthetic_account_1/: test_corpus_expansion.py
workflows/send_invoice/: README.md  activities.py  agents.py  context.py  primitives.py  sandbox.py  scope_gate.py  types.py  worker.py  workflow.py
(+30 files in other folders)
